fix(location-nav): no left padding on mobile

--- a/src/templates/module_07_locations/styles.less
+++ b/src/templates/module_07_locations/styles.less
@@ -15,8 +15,7 @@
 	.location-address {
 		position: relative;
 		z-index: 20;
-
-		padding: 0 0 0 @s2-moduleGap-s-3;
+		
 		margin-top: -15px;
 	}
 
