--- a/src/templates/module_18_infographic3_hero/styles.less
+++ b/src/templates/module_18_infographic3_hero/styles.less
@@ -10,7 +10,7 @@
 		left: 50%;
 		transform: translateX(-50%);
 		z-index: 1;
-		max-width: 445px;
+		max-width: 50%;
 		max-height: 75%;
 		fill: currentColor;
 	}
@@ -43,6 +43,9 @@
 	@media @s2-mq-window-tablet {
 		.facts {
 			height: 620px;
+		}
+		.infographic-no {
+			max-width: 445px;
 		}
 	}
 
